<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonClearText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiscount5" />

    <TextView
        android:id="@+id/labelTicketPrice"
        android:layout_width="149dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/labelTicketPriceText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelDiscountPercent"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/labelDiscountPercentText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/labelTicketPrice"
        app:layout_constraintTop_toBottomOf="@+id/labelTicketPrice" />

    <TextView
        android:id="@+id/labelDiscountPercentValue"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDiscountPercent"
        app:layout_constraintStart_toStartOf="@+id/editTicketPrice" />

    <TextView
        android:id="@+id/labelDiscountPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDiscountPrice"
        app:layout_constraintStart_toStartOf="@+id/editTicketPrice"
        app:layout_constraintTop_toBottomOf="@+id/labelDiscountPercentValue" />

    <TextView
        android:id="@+id/labelDiscountPrice"
        android:layout_width="148dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/labelDiscountPriceText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/labelDiscountPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDiscountPercent" />

    <Button
        android:id="@+id/buttonDiscount1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonDiscount1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDiscountPrice" />

    <Button
        android:id="@+id/buttonDiscount2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonDiscount2Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiscount1" />

    <Button
        android:id="@+id/buttonDiscount3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonDiscount3Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiscount2" />

    <Button
        android:id="@+id/buttonDiscount4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonDiscount4Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiscount3" />

    <Button
        android:id="@+id/buttonDiscount5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonDiscount5Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiscount4" />

    <EditText
        android:id="@+id/editTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelTicketPrice"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>